# gallery-website

./: .dockerignore  .env  .env-prod  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  docker-compose-prod.yaml  docker-compose-prod.yml  docker-compose.yaml  docker-compose.yml
back/: .dockerignore  .gitignore  Dockerfile  entrypoint-dev.sh  entrypoint-prod.sh  gunicorn.conf.py  manage.py  pyproject.toml
back/api/: admin.py  apps.py  models.py  serializers.py  urls.py  users.sql  views.py
back/api/migrations/: 0001_initial.py  0002_year_alter_file_gallery_promo_gallery_year_and_more.py  0003_alter_gallery_date.py  0004_alter_gallery_name.py  0005_gallery_slug.py  0006_face.py  0007_gallery_view.py
back/galerie/: asgi.py  celery.py  loader.py  recognition.py  settings.py  urls.py  views.py  wsgi.py
back/galerie/static/css/: style.css
back/galerie/templates/: add_promo.html  expositions.html  finder.html  galleries.html  gallery.html  head.html  header.html  index.html  material.html  test.html
back/galerie/templates/registration/: background.html  logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  password_reset_subject.html
back/gestion/: apps.py  urls.py  views.py
back/gestion/templates/: gestiongallery.html  gestionindex.html
back/test/: test_models.py  test_views.py
kubernetes/: back-deployment.yaml  db-deployment.yaml  env.yaml  nginx-deployment.yaml  persistant-volumes.yaml  (+1 more)
nginx/: Dockerfile  (+2 more)
(+32 files in other folders)
